<resources>
    <string name="app_name">Case Simulator - Spectrum</string>

    <string name="title_activity_open_case">Open Case</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="title_activity_flip_coin">Flip Coin</string>
    <string name="title_activity">Flip Coin</string>
    <string name="rare">Rare</string>
    <string name="_specialItem">Special Item</string>
    <string name="mythical">Mythical</string>
    <string name="legendary">Legendary</string>
    <string name="ancient">Ancient</string>
    <string name="uniq">Exceedingly Rare</string>
    <string name="_color0">Common</string>
    <string name="_color1">Uncommon</string>
    <string name="_color2">Mil-Spec</string>
    <string name="_color3">Restricted</string>
    <string name="_color4">Classified</string>
    <string name="_color5">Covert</string>
    <string name="_color6">★</string>
    <string name="_quality0">Battle-Scared</string>
    <string name="_quality1">Factory New</string>
    <string name="_quality2">Field-Tested</string>
    <string name="_quality3">Minimal Wear</string>
    <string name="_quality4">Well-Worn</string>
    <string name="open_case">Open Case</string>
    <string name="case_opening">Container Opening...</string>
    <string name="addwallet">Add your wallet</string>
    <string name="addingenventer">Item add your inventory</string>
    <string name="gain">You earn this</string>
    <string name="sell">Sell</string>
    <string name="addEnvetory">Add Inventory</string>
    <string name="chooseCase">Choose Case</string>
    <string name="back">Back</string>
    <string name="key"> Key</string>
    <string name="wallet">Enough credit, you can free earn credit, click wallet button</string>
    <string name="totalPrice">Page Value : </string>
    <string name="itemCount">Item Count : </string>
    <string name="needXP">Required XP : 20</string>
    <string name="yourXP">Your XP :</string>
    <string name="totalValue">Inventory Value :</string>
    <string name="cancel">Cancel</string>
    <string name="cash">Cash :</string>
    <integer name="caseCount">0</integer>
    <string name="chooseAvayar">Choose Avatar</string>
    <string name="layoutCaseOpening">Open Case</string>
    <string name="title_activity_enventory">Inventory</string>
    <string name="changeUserName">Change UserName</string>
    <string name="enterUsername">Enter Username</string>
    <string name="okey">Ok</string>
    <string name="chancedUserName">Your username has been chanced. New Username : </string>
    <string name="mindice">You must enter some value and you must select one dice</string>
    <string name="levelUp">Levep Up !!!</string>
    <string name="levelUpInfo">You levep up </string>
    <string name="levelUpInfo1"> and win </string>
    <string name="title_activity_dice">dice</string>
    <string name="dice">Play Dice</string>
    <string name="diceInfo">Value ( 1$ = 100 ) : </string>
    <string name="title_activity_crush">crush</string>
    <string name="crush">Crush</string>
    <string name="start">Start</string>
    <string name="title_activity_filip_coin">Filip Coin</string>
    <string name="chooseside">Choose Side</string>
    <string name="choosesidee1">Please select side.</string>
    <string name="flipping">Flipping...</string>
    <string name="yourchoose">Your Choose</string>
    <string name="winner">Winner</string>
    <string name="value">Value</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_watch_ads">WatchAds</string>
    <string name="title_activity_ads">AdsActivity</string>
    <string name="menu_opencase">Open Case</string>
    <string name="menu_dice">Play Dice</string>
    <string name="menu_flipcoin">Play Flip Coin</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_inventory">Inventory</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="play_game">Play</string>

    <string name="title_activity_test">test</string>

<string name="noitem">No items fit these conditions</string>
    <string name="AD_APP_ID">ca-app-pub-3334769179694817~9353191283</string>
    <string name="AD_REWARDED_VIDEO">ca-app-pub-3334769179694817/1829924480</string>
    <string name="AD_BANNER">ca-app-pub-3334769179694817/3306657683</string>
    <string name="AD_INTERSTITIAL">ca-app-pub-3334769179694817/6260124082</string>
    <string name="soundEffect">Sound Effect</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_inventory">Inventory</string>
    <string name="nav_mainmenu">Main Menu</string>
    <string name="nav_openCase">Open Case</string>
    <string name="nav_dice">Play Dice</string>
    <string name="addItem">Add Item</string>
    <string name="nav_flip_coin">Play Flip Coin</string>
    <string name="title_activity_settings">settings</string>
    <string name="win">Win : </string>
    <string name="lose">Lose : </string>
    <string name="selectedItemCount">Selected : </string>
    <string name="potValue">Pot : </string>
    <string name="selectedItem">SELECTED</string>
    <string name="widthdraw">Widthdraw</string>
    <string name="maxPot10">You can selected 10 items maximum</string>
    <string name="select">Select items</string>

    <string name="textLevel">Level : </string>
    <string name="textCash">Cash : </string>
    <string name="textInventoryValue">Inventory Value : </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_mine_sweeper">MineSweeper</string>
    <string name="nav_minesweeper">Mine Sweeeper</string>

    <string name="prize">Prize : </string>
    <string name="next_prize">Next Prize : </string>
    <string name="title_activity_jackpot">Jackpot</string>
    <string name="congratulations">Congratulations</string>

    <string name="shortQuality0">(BS)</string>
    <string name="shortQuality1">(FN)</string>
    <string name="shortQuality2">(FT)</string>
    <string name="shortQuality3">(MW)</string>
    <string name="shortQuality4">(WW)</string>
    <string name="title_activity_trade_up">TradeUp</string>

    <string name="layoutTrade">Trade Up</string>
    <string name="layoutMine">Mine Sweeeper</string>
    <string name="layoutJackpot">Jackpot</string>
    <string name="layoutFlipCoin">Flip Coin</string>
    <string name="layoutDice">Dice</string>
    <string name="layoutTradeUp">Trade Up</string>

    <string name="stattrak">StatTrak™</string>
    <string name="craft">Craft</string>
    <string name="newlevel">Level up to :</string>
    <string name="earnprize">You win </string>

    <string name="chooseKey">Choose Key</string>

    <string name="youravatar">Your Avatar</string>
    <string name="chooseavatar">Choose Avatar</string>

    <string name="rolling">Rolling..</string>
    <string name="confirm">Confirm</string>
    <string name="play">Play</string>
    <string name="souvenir">Souvenir</string>
    <string name="changeafteravatar">Changed your avatar after reset</string>

    <string name="menuinventory">Inventory</string>
    <string name="menuopencase">Open Case</string>
    <string name="menutradeup">Trade Up</string>
    <string name="menujackpot">Jackpot</string>
    <string name="menumine">Mine Sweeper</string>
    <string name="menuflipcoin">Flip Coin</string>
    <string name="menudice">Dice</string>
    <string name="menusettings">Settings</string>

    <string name="balance">Insufficient balance</string>
</resources>
