<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_flip_coin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/a"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tombulscasesimulator.FlipCoin"
    tools:showIn="@layout/app_bar_flip_coin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="8"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/wallet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="32dp"
            android:gravity="right|center"
            android:textColor="@color/textcolor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_activity_filip_coin"
            android:textAlignment="gravity"
            android:textColor="@color/textcolor"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbCT"

                android:layout_width="96dp"
                android:layout_height="192dp"
                android:background="@mipmap/hct"
                android:button="@android:color/transparent" />

            <RadioButton
                android:id="@+id/rbT"
                android:layout_width="96dp"
                android:layout_height="192dp"
                android:background="@mipmap/ht"
                android:button="@android:color/transparent" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chooseside"
            android:textAlignment="gravity"
            android:textColor="@color/textcolor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/diceInfo"
                android:textAlignment="gravity"
                android:textColor="@color/textcolor"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/filipValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/textcolor" />

        </LinearLayout>

        <Button
            android:id="@+id/btnMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/start"
            android:textColor="@color/textcolor" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_weight="0.92"
            android:background="@color/gainBackground">

            <LinearLayout
                android:id="@+id/lyResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/yourchoose"
                        android:textAlignment="gravity"
                        android:textColor="@color/textcolor" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/winner"
                        android:textColor="@color/textcolor"
                        android:textColorLink="@color/textcolor" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/value"
                        android:textColor="@color/textcolor" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/bannerFlipCoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/AD_BANNER" />
    </LinearLayout>
</RelativeLayout>
