<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_dice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@mipmap/a"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tombulscasesimulator.Dice"
    tools:showIn="@layout/app_bar_dice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="8"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/wallet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="32dp"
            android:gravity="right|center"
            android:textColor="@color/textcolor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"


        android:background="@android:drawable/screen_background_dark_transparent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dice"
            android:textAlignment="gravity"
            android:textColor="@color/textcolor"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:srcCompat="@mipmap/dice6" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@mipmap/abc_btn_check_to_on_mtrl_000"
                android:elevation="1dp"
                android:text="1"
                android:textColor="@color/textcolor" />

            <RadioButton
                android:id="@+id/rd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@mipmap/abc_btn_check_to_on_mtrl_000"
                android:elevation="1dp"
                android:text="2"
                android:textColor="@color/textcolor" />

            <RadioButton
                android:id="@+id/rd3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@mipmap/abc_btn_check_to_on_mtrl_000"
                android:text="3"
                android:textColor="@color/textcolor" />

            <RadioButton
                android:id="@+id/rd4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@mipmap/abc_btn_check_to_on_mtrl_000"
                android:text="4"
                android:textColor="@color/textcolor" />

            <RadioButton
                android:id="@+id/rd5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@mipmap/abc_btn_check_to_on_mtrl_000"
                android:elevation="1dp"
                android:text="5"
                android:textColor="@color/textcolor" />

            <RadioButton
                android:id="@+id/rd6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@mipmap/abc_btn_check_to_on_mtrl_000"
                android:elevation="1dp"
                android:text="6"
                android:textColor="@color/textcolor" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diceInfo"
                android:textColor="@color/textcolor" />

            <EditText
                android:id="@+id/miktar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6"
                android:text="0"
                android:textColor="@color/textcolor" />

        </LinearLayout>

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/play"
            android:textColor="@color/textcolor" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@color/gainBackground">

            <LinearLayout
                android:id="@+id/resultList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/button"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/yourchoose"
                        android:textColor="@color/textcolor" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/winner"
                        android:textColor="@color/textcolor" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/value"
                        android:textColor="@color/textcolor" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_weight="0.05"
        ads:adSize="BANNER"
        ads:adUnitId="@string/AD_BANNER"></com.google.android.gms.ads.AdView>


</RelativeLayout>
