<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/a"
    tools:context="com.tombulscasesimulator.ChangeAvatar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/youravatar"
            android:textColor="@color/textcolor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/avatar0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:gravity="center"
            android:text="@string/chooseAvayar"
            android:textColor="@color/textcolor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:elevation="1dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:elevation="1dp"
                app:srcCompat="@mipmap/back" />

            <GridLayout
                android:id="@+id/glAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:columnCount="2"
                android:elevation="1dp">
                android:layout_weight="2"</GridLayout>

            <ImageView
                android:id="@+id/imgNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:elevation="2dp"
                app:srcCompat="@mipmap/forwad" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="0"
            android:textColor="@color/textcolor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:elevation="0dp"
            android:text="@string/okey"
            android:textColor="@color/textcolor" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
